@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 3;
+use Test::More tests => 4;
 use Module::ScanDeps qw/scan_chunk/;
 
 {
@@ -28,4 +28,12 @@ use parent qw(strict);
 EOT
 my @array=sort (scan_chunk($chunk));
 is_deeply(\@array,[sort qw{parent.pm strict.pm}]);
+}
+
+{
+my $chunk=<<'EOT';
+use parent::doesnotexists qw(strict);
+EOT
+my @array=sort (scan_chunk($chunk));
+is_deeply(\@array,[sort qw{parent/doesnotexists.pm}]);
 }
